--- a/tohoho/package.json
+++ b/tohoho/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   }
