--- a/tohoho/tsconfig.json
+++ b/tohoho/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": { "@alias1/*": ["components/*"] },
     "lib": [
       "dom",
       "dom.iterable",
